@@ -1,7 +1,7 @@
 /*
 Theme Name: DarkElements
 Theme URI: http://www.guidovanderleest.nl/darkelements
-Version: 3.8
+Version: 3.9
 Author: Guido van der Leest
 Author URI: http://www.guidovanderleest.nl
 Description: DarkElements is a free, clean, minimalistic, responsive, mobile friendly WordPress theme. Features: sidebar on left side, navigation on left side, widget areas in footer, custom header image, custom background, custom logo to replace blogname and description. Enjoy. 
@@ -202,10 +202,9 @@ img.aligncenter {display:block; margin:0.4em auto 0.4em auto;}
 .wp-caption {max-width:100%;}
 .wp-caption-text {text-align:center;}
 
+.gallery img {border:0 !important;}
 .gallery dl, .gallery dt, .gallery dd {margin:0; padding:0;}
 .gallery-caption {max-width:100%; text-align:center;}
-
-#container .gallery img {border:0;}
 
 
 /* SEARCHFORM */
