@@ -1,6 +1,10 @@
 CHANGELOG
 =========
 
+DarkElements version 3.9 - march 2016
+- localized mobile menu
+- mobile menu now supports 2 level subpages
+
 DarkElements version 3.8 - march 2016
 - added file postmeta-single
 - file single: relocated postmetadata to separate file
@@ -101,5 +105,3 @@ DarkElements version 2.1 - december 2014
 
 DarkElements version 1.9 - november 2014 
 - first stable release
-
-
